{{$NEXT}}

0.0994_02 2014-03-15 23:07:23 America/Los_Angeles

      [NEW COMMANDS]

      - The "reset" ommand moves the head of the stack to a prior revision,
      thereby discarding all subsequent revisions.  This command is still
      experimental.  See the POD for more details.

      [ENHANCEMENTS]

      - The index file for each stack now contains artificial records for
      each module that is included in the target version of perl.  This
      allows installers to cope with requests to install core modules,
      which normally aren't present in a Pinto repository.  If you pull
      a dual-life module, it will mask the artifical records.  The
      artifical records never appear in a stack diff or listing.

      NOTE: This change will take effect the next time you perform
      any command that modifies the state of the stack.

      [INCOMPATIBLE CHANGES]

      - The argument for the "init" command is now the repository root
      instead of the stack name.  This makes the interface more convenient
      and more familiar to git users.  You can still specify the root
      using the global --root option if you like.  And the initial stack
      name can be set with the --stack option.

0.0994_01 2014-03-05 01:04:46 America/Los_Angeles

      [NEW COMMANDS]

      - The "revert" command creates a new revision that matches the state
      at a prior revision.  This command is still experimental.  See the
      POD for more details.

      [BUG FIXES]

      - The "install" command threw an exception with a misleading error
      message when using the -m option without --do-pull.  Now, both the
      -m and -M options are silently ignored when --do-pull is not used.
      Fixes GH #145 (thanks, @hartzell)

0.0994    2014-03-01 16:04:28 America/Los_Angeles

      [ENHANCEMENTS]

      - Improved the locking mechanism so concurrent read operations are
        sometimes possible, especially during the "install" command.  This
        fixes GH #142.
